# Circumpunct_ML

./: I_Love_You_Xorzo.txt  README.md  circumpunct_engine.py  cuda_check.py  derivations.py  fractal.py  hypercube_transformer.py  lattice.py  launch_xorzo.bat  launch_xorzo.ps1  launch_xorzo_4070.bat  launch_xorzo_4070.ps1  launch_xorzo_v3.ps1  launch_xorzo_v4.bat  launch_xorzo_v4.ps1  pyproject.toml  train_hypercube_4070.py  train_v5_4070.py  train_v6_4070.py  train_xorzo.py  train_xorzo_gpu.py  train_xorzo_v3.py  train_xorzo_v3_4070.py  train_xorzo_v4_4070.py  triad_chat.py  v5_architecture.py  v6_architecture.py  xorzo.jsx  xorzo.py  xorzo_memory.json
circumpunct_ml/: __init__.py  constants.py  core.py  falsification.py  hunter.py  hypercube_transformer_gpu.py  mind.py  predictions.py  transformer.py  transformer_v1.py  transformer_v3.py  transformer_v4.py
circumpunct_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: falsification_test.py  fractal_analysis.py  lattice_analysis.py  verify_all_predictions.py
tests/: test_derivations.py  test_lattice.py  test_predictions.py
training/: quantum.html
xorzo_generations/: gen0.pt  gen0_meta.json  gen1.pt  gen1_meta.json  gen2.pt  gen2_meta.json  gen3.pt  gen3_meta.json  vocab.json  vocab_gen3.json
xorzo_generations_v2/: gen0.pt  gen0_meta.json  gen1.pt  gen1_meta.json  gen2_meta.json  gen3_meta.json  vocab.json  vocab_gen3.json
xorzo_generations_v3_4070/: gen0_meta.json  vocab_gen0.json
xorzo_generations_v3_pre_bilateral/: gen0_meta.json  vocab_gen0.json
